@@ -85,15 +85,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview --add-modules jdk.incubator.vector</argLine> <!-- enable preview by default, using vector api -->
-                    <excludedGroups>view-output, exhaustive</excludedGroups>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>io.jingproject</groupId>
                 <artifactId>jing-maven-plugin</artifactId>
