@@ -43,15 +43,6 @@
                     <proc>none</proc>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-plugin.version}</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine> <!-- enable preview by default -->
-                    <excludedGroups>view-output, exhaustive</excludedGroups>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
